# KAgent

./: .gitignore  README.md  com.github.XtremeTHN.KAgent.json  meson.build
data/: com.github.XtremeTHN.KAgent.desktop.in  com.github.XtremeTHN.KAgent.gschema.xml  com.github.XtremeTHN.KAgent.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  es.po  kagent.pot  meson.build
src/: Agent.vala  App.vala  Background.vala  Dialog.vala  kagent.gresource.xml  meson.build
src/ui/: dialog.blp  main.blp  settings  style.css
